--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,30 @@
 .container{
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: top;
   min-height: 50vh;
   background-color: #f5f5f5;
+  display: flex;
+  flex-wrap: wrap;
 }
 .form-container {
   margin: 20px;
   width: 300px;
+  border: black solid 1px;
+  padding: 10px;
+  border-radius: 10px;
+}
+.form-container-mini {
+  margin: 20px;
+  
+  border: black solid 1px;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .form-container h2 {
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .form-container form {
@@ -38,8 +51,70 @@
   color: white;
   cursor: pointer;
 }
+.form-container select {
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+}
 
 .form-container input[type="submit"]:hover {
   background-color: #45a049;
 }
 
+.second-block{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  justify-content: center;
+  align-items: center;
+}
+.warning{
+  color: red;
+}
+
+section {
+  width: 80%;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 650px) {
+  section {
+    width: 100%;
+  }
+}
+message {
+  background-color: #7c68ff;
+  color: white;
+  padding: 10px 15px; 
+  margin: 10px auto; 
+  border: 1px solid transparent; 
+  border-radius: 4px;
+  text-align: center; 
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.center{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.link-blue {
+  text-decoration: none;
+  color: blue;
+  font-weight: 700;
+}
+
+.link-white {
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+}
